tests/fixtures/errors/e0201_forward_const.mimz
// expect: E0201
const A: int = B
const B: int = 1
module M {
  out y: bit
  y = 0
}
